@@ -62,7 +62,7 @@ public class Test {
             .filter(dish -> dish.getCalories() > 300)
             .map(Dish::getName)
             .limit(3)
-            .collect(Collectors.toList());
+            .toList();
     
 
 }
